[project]
name = "catcode"
version = "0.1.0"
description = "飞书机器人 → Claude Code 桥接服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn>=0.47.0",
]

[project.scripts]
catcode = "catcode.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
