[project]
name = "catcode"
version = "0.1.0"
description = "飞书机器人 → Claude Code 桥接服务"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "lark-oapi>=1.6.5",
    "python-dotenv>=1.0",
]

[project.scripts]
catcode = "catcode.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
